# image-classification-tf

./: .gitignore  .rclone.conf  Jenkinsfile  LICENSE  README.md  compute.ipynb  compute_predictions.py  requirements.txt  setup.cfg  test.py  tox.ini
.Trash-0/info/: 3.0-Computing_predictions-jvsc-5b724f78-7013-43c5-aa63-ed7ef2b9038a18cbe619-eb4d-4fac-a5c0-58880f0ff9b7.ipynb.trashinfo  3.0-Computing_predictions-jvsc-a242ed65-cff2-430b-9ebd-a7f52c866f7207c73696-4579-46b0-a7e5-d9b4ea67e2bb.ipynb.trashinfo  3.0-Computing_predictions-jvsc-a3086a78-256b-4d28-8daa-c044bc849360362fdac7-48aa-4d1d-a811-46d037655b49.ipynb.trashinfo  (+2 more)
docker/: Dockerfile.dev  Dockerfile.tests  advanced_activations.py
docs/: Makefile  conf.py  make.bat
etc/: config.yaml  demo-config.yaml
imgclas/: api.py  config.py  data_utils.py  model_utils.py  optimizers.py  paths.py  plot_utils.py  test_utils.py  test_wout.ipynb  train_runfile.py  unit_tests.py  utils.py
notebooks/: 1.0-Dataset_exploration.ipynb  2.0-Model_training.ipynb  3.0-Computing_predictions.ipynb  3.1-Prediction_statistics.ipynb  3.2-Saliency_maps.ipynb  TEST.PY
phytoplankton_species_classifier/: api.py  apicopy.py  model_utils.py  optimizers.py  paths.py  test_utils.py  test_wout.ipynb  train_runfile.py  utils.py
phytoplankton_species_classifier.egg-info copy/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
planktonclas/: api.py  config_test.py  data_utils.py  debug.py  importt.py  model_utils.py  paths.py  plot_utils.py  test_utils.py  test_wout.ipynb  train_runfile.py  train_wout.py  utils.py
(+38 files in other folders)
