[metadata]
name = planktonclas
summary = This is a plug-and-play tool to train and evaluate an image classifier on a custom dataset using deep neural networks.
author = Ignacio Heredia (CSIC)
author-email = iheredia@ifca.unican.es
version = 0.1.0
license = Apache
home-page = https://github.com/deephdc/phyto-plankton-classification
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    planktonclas

[entry_points]
deepaas.v2.model =
    planktonclas = planktonclas.api

